--- a/2022.09.05/index.html
+++ b/2022.09.05/index.html
@@ -24,8 +24,8 @@
     <main>
         <form action="">
             <h2>Your Tasks</h2>
-            <div class="task-input">
-                <input type="text" placeholder="e.g. wash dishes">
+            <div class="input-container">
+                <input class="task-input" type="text" placeholder="e.g. wash dishes">
                 <button>Add</button><br>
                 <small class="alert">There was An Error</small>
             </div>
