some changes/ btn / input

--- a/2022.09.05/form.html
+++ b/2022.09.05/form.html
@@ -40,7 +40,7 @@
                     </label>
                 </div>
             <button class="edit-btn">Edit</button><br>
-            <small>There Was An Error</small>
+            <p>There Was An Error</p>
         </form>
             <div class="return-btn">
                 <button>Back to Tasks</button>
