--- a/2022.09.05/index.html
+++ b/2022.09.05/index.html
@@ -23,11 +23,17 @@
     </header>
     <main>
         <form action="">
-            <h2>Your Tasks</h2>
+           <!-- <h2>Your Tasks</h2>
             <div class="input-container">
                 <input class="task-input" type="text" placeholder="e.g. wash dishes">
                 <button>Add</button><br>
                 <small class="alert">There was An Error</small>
+            </div>-->
+            <div class="form-container">
+                <h2>Your Tasks</h2>
+                <input type="text" name="" id="input-task" placeholder="e.g. wash dishes">
+                <button class="add-btn">Add</button><br>
+                <p>There Was An Error</p>
             </div>
             <section class="tasks-container">
                 <div class="tcontainer1">
