--- a/2022.09.05/form.html
+++ b/2022.09.05/form.html
@@ -43,7 +43,7 @@
             <p>There Was An Error</p>
         </form>
             <div class="return-btn">
-                <button>Back to Tasks</button>
+                <a href="index.html"><button>Back to Tasks</button></a>
             </div>
         </main>
 </body>
