--- a/2022.09.14/hiking.html
+++ b/2022.09.14/hiking.html
@@ -12,7 +12,7 @@
         <div class="logo-text">
             <p>Hiking <span>Tours</span></p>
         </div>
-        <nav>
+        <nav class="header-nav">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
@@ -26,12 +26,12 @@
         </div>
     </header>
     <main>
-        <div class="explore">
-            <div class="explore-content">
-                <h1>CONTINUE EXPLORING</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim vel perferendis iste.</p>
-                <button>Explore Tours</button>
-            </div>
+        <div class="explore">  
+                <div class="explore-content">
+                    <h1>CONTINUE EXPLORING</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero tempore perferendis iure blanditiis et!</p>
+                    <button>Explore Tours</button>
+                </div>
         </div>
         <div class="about">
             <h2>ABOUT <span>US</span></h2>
@@ -77,23 +77,108 @@
         </div>
         <div class="tours-container">
             <h2>FEATURED <span>TOURS</span></h2>
-            <div class="tibet-container">
-                <section class="tibet-section">
-                    <p>August 14th, 2022</p>
-                </section>
-                <section class="price-section">
-                    <div class="price-left">
-                        <p>Tibet Adventure</p>
-                        <a href="#">China</a>
+            <div class="tours-content">
+                <div class="tibet-container tour-spacing">
+                    <section class="tibet-section tours">
+                        <p>August 14th, 2022</p>
+                    </section>
+                    <section class="price-section">
+                        <div class="price-left">
+                            <p>Tibet Adventure</p>
+                            <a href="#">China</a>
+                        </div>
+                        <div class="price-right">
+                            <p>6 Days</p>
+                            <p>From $2100</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="java-container tour-spacing">
+                    <section class="java-section tours">
+                        <p>October 11th, 2022</p>
+                    </section>
+                    <section class="price-section">
+                        <div class="price-left">
+                            <p>Best of Java</p>
+                        <a href="#">Indonesia</a>
                     </div>
                     <div class="price-right">
-                        <p>6 Days</p>
-                        <p>From $2100</p>
+                        <p>10 Days</p>
+                        <p>From $4100</p>
                     </div>
                 </section>
+                </div>
+                <div class="hon-kong-container tour-spacing">
+                    <section class="kong-section tours">
+                        <p>September 26th, 2022</p>
+                    </section>
+                    <section class="price-section">
+                        <div class="price-left">
+                            <p>Explore Hong Kong</p>
+                            <a href="#">Hong Kong</a>
+                        </div>
+                        <div class="price-right">
+                            <p>12 Days</p>
+                            <p>From $3100</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="kenya-container tour-spacing">
+                    <section class="kenya-section tours">
+                        <p>December 5th, 2022</p>
+                    </section>
+                    <section class="price-section">
+                        <div class="price-left">
+                            <p>Kenya Highlights</p>
+                            <a href="#">Kenya</a>
+                        </div>
+                        <div class="price-right">
+                            <p>22 Days</p>
+                            <p>From $5400</p>
+                        </div>
+                    </section>
+                </div>
             </div>
+            <a href="#">All Tours</a>
+        </div>
+        <div class="gallery">
+            <section class="gallery-header">
+                <h2>OUR <span>GALLERY</span></h2>
+            </section>
+            <section class="gallery-img">
+                <img src="img/tibetG.jpg" alt="tibet nature">
+                <img src="img/indonesiaG.jpg" alt="Indonesia nature">
+                <img src="img/kongG.jfif" alt="Hong Kong city">
+                <img src="img/kenyaG.jpg" alt="Kenya nature">
+            </section>
+            <section class="gallery-form">
+                <div class="form-text">
+                    <h5>WANT LATEST TOUR INFO AND UPDATES?</h5>
+                    <p>Sign Up for Newsletter and Stay Up To Date</p>
+                </div>
+                <form action="">
+                    <input type="email" name="" id="email" placeholder="Your Email">
+                    <button>SUBMIT</button>
+                </form>
+            </section>
         </div>
     </main>
-    
+    <footer>
+        <div class="footer-content">
+            <nav class="footer-nav">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Featured</a>
+                <a href="#">Gallery</a>
+            </nav>
+            <div class="social-link">
+                <a href="https://www.facebook.com/"><img src="png/facebook.png" alt="facebook logo"></a>
+                <a href="https://twitter.com/"><img src="png/twitter.png" alt="twitter logo"></a>
+                <a href="https://www.linkedin.com/"><img src="png/in.png" alt="linkedin logo"></a>
+            </div>
+            <p>Copyright © Hiking Tours 2022. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
